name changes etc

--- a/AI - Index/index.html
+++ b/AI - Index/index.html
@@ -26,12 +26,9 @@
         <!-- TIP: replace @main with a commit SHA for stronger caching -->
         <a-asset-item
           id="city"
-          src="https://cdn.jsdelivr.net/gh/AntonAnderssonMedia/Camera_HiroModel@main/nrkpg-map.png">
+          src="https://cdn.jsdelivr.net/gh/AntonAnderssonMedia/Camera_HiroModel@main/nrkpg-model.glb">
         </a-asset-item>
       </a-assets>
-
-      <!-- For GLB model on top of marker instead, replace this -->
-      <!-- src="https://cdn.jsdelivr.net/gh/AntonAnderssonMedia/Camera_HiroModel@main/nrkpg-model.glb"> -->
 
       <!-- Simple light so materials look decent 
       <a-entity light="type: hemisphere; intensity: 1"></a-entity> -->
